--- a/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
+++ b/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <com.scanner.bth.bluetoothscanner.StatusIndicatorView
+        android:id="@+id/status_indicator"
         android:layout_marginLeft="4px"
         android:layout_marginRight="10px"
         android:layout_marginTop="4px"
-        android:src="@drawable/ic_launcher" >
-    </ImageView>
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 
     <TextView
         android:id="@+id/bth_scan_result_name"
