--- a/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
+++ b/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
     <com.scanner.bth.bluetoothscanner.StatusIndicatorView
         android:id="@+id/status_indicator"
@@ -10,14 +12,45 @@
         android:layout_marginTop="4px"
         android:layout_width="100dp"
         android:layout_height="100dp" />
-
-    <TextView
-        android:id="@+id/bth_scan_result_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Test"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
-        android:paddingLeft="20dp">
-    </TextView>
+        android:orientation="vertical">
+            <TextView
+                android:id="@+id/bth_scan_result_uuid"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                />
+            <TextView
+                android:id="@+id/bth_scan_result_mac_address"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Major: "/>
+            <TextView
+                android:id="@+id/bth_scan_result_major"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Minor: "/>
+            <TextView
+                android:id="@+id/bth_scan_result_minor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
