--- a/Android/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/app/src/main/res/layout/fragment_detail.xml
@@ -5,8 +5,6 @@
     android:layout_gravity="top"
     android:padding="10dp"
     tools:context="com.scanner.bth.bluetoothscanner.DetailFragment">
-
-    <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:text="@string/hello_blank_fragment" />
     <LinearLayout
@@ -84,4 +82,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <GridView
+        android:id="@+id/bth_detail_scan_record"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="2dp"
+        android:columnWidth="45dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="2dp"
+        android:horizontalSpacing="2dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"></GridView>
 </LinearLayout>
