--- a/Android/app/src/main/res/menu/menu_main.xml
+++ b/Android/app/src/main/res/menu/menu_main.xml
@@ -5,8 +5,13 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
     <item android:id="@+id/action_search"
-        android:icon="@drawable/ic_menu_refresh"
+        android:icon="@drawable/ic_action_refresh"
         android:title="@string/action_ble_scan"
         app:showAsAction="always" />
+    <item android:id="@+id/action_stop_search"
+        android:icon = "@drawable/ic_action_remove"
+        android:title="@string/action_ble_scan_stop"
+        app:showAsAction="always"/>
 </menu>
