--- a/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
+++ b/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
@@ -5,16 +5,17 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
 
-    <com.scanner.bth.bluetoothscanner.StatusIndicatorView
+    <com.scanner.bth.bluetoothscanner.MouseIndicatorView
         android:id="@+id/status_indicator"
-        android:layout_marginLeft="4px"
-        android:layout_marginRight="10px"
-        android:layout_marginTop="4px"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="4dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
             <TextView
                 android:id="@+id/bth_scan_result_uuid"
