--- a/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
+++ b/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
@@ -7,12 +7,17 @@
 
     <com.scanner.bth.bluetoothscanner.MouseIndicatorView
         android:id="@+id/status_indicator"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="4dp"
+        android:layout_margin="10dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"/>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:background="@color/light_blue"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,36 +27,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 />
-            <TextView
-                android:id="@+id/bth_scan_result_mac_address"
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Major: "/>
-            <TextView
-                android:id="@+id/bth_scan_result_major"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Minor: "/>
-            <TextView
-                android:id="@+id/bth_scan_result_minor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
