--- a/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
+++ b/Android/app/src/main/res/layout/bth_scan_result_list_row.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    >
 
     <com.scanner.bth.bluetoothscanner.MouseIndicatorView
         android:id="@+id/status_indicator"
@@ -14,19 +14,25 @@
 
     <View
         android:layout_width="1dp"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
         android:background="@color/light_blue"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+            <ImageView
+                android:id="@+id/bth_scan_result_finished_log_entry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="10dp"
+                android:background="@drawable/check"/>
             <TextView
+                android:layout_margin="10dp"
                 android:id="@+id/bth_scan_result_uuid"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:layout_height="50dp"
+                android:text="South-west corner"
+                android:textStyle="bold"
+                android:typeface="monospace"
+                android:gravity="center"
+                android:textSize="15dp"
                 />
-    </LinearLayout>
-
 </LinearLayout>
