--- a/Android/app/src/main/res/layout/fragment_item_list.xml
+++ b/Android/app/src/main/res/layout/fragment_item_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/smartwave_white"
     tools:context="com.scanner.bth.bluetoothscanner.ItemFragment">
     <LinearLayout
         android:id="@+id/fragment_item_location_bar"
@@ -29,14 +30,16 @@
             android:text="Riverrun"
             android:textSize="10pt"
             android:textColor="@color/smartwave_white"
-            android:fontFamily="sans-serif-thin"
+            android:fontFamily="sans-serif"
             android:layout_weight="1"/>
         <Button
             android:id="@+id/fragment_item_list_complete_log"
             android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_height="35dp"
             android:layout_weight="0"
-            android:text="Finish"/>
+            android:text="Finish"
+            android:background="@drawable/holo_button"
+            android:textColor="@drawable/holo_button_text"/>
     </LinearLayout>
     <ListView
         android:id="@android:id/list"
@@ -44,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_item_location_bar"
         android:layout_above="@+id/fragment_item_logo"
+        android:background="@color/smartwave_white"
         />
     <ImageView
         android:id="@+id/fragment_item_logo"
