--- a/Android/app/src/main/res/layout/fragment_smoke_screen.xml
+++ b/Android/app/src/main/res/layout/fragment_smoke_screen.xml
@@ -1,10 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/smartwave_blue"
     tools:context="com.scanner.bth.bluetoothscanner.SmokeScreenFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+    <WebView
+        android:id="@+id/smoke_web_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Tracking GPS..."
+        android:textColor="@color/smartwave_white"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:textSize="14pt"
+        android:fontFamily="sans-serif-thin"/>
+</RelativeLayout>
