--- a/Android/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/app/src/main/res/layout/fragment_detail.xml
@@ -8,7 +8,7 @@
     tools:context="com.scanner.bth.bluetoothscanner.DetailFragment">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/main_header_height"
         android:orientation="horizontal"
         android:background="@color/smartwave_cyan">
         <RelativeLayout
@@ -26,8 +26,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:text="3"
-                android:fontFamily="sans-serif"
-                android:textSize="12pt"
+                android:fontFamily="sans-serif-thin"
+                android:textSize="@dimen/main_header_font_size"
                 android:textColor="@color/smartwave_white"
                 android:gravity="center"/>
         </RelativeLayout>
@@ -37,9 +37,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="South-west corner"
-            android:textSize="10pt"
+            android:textSize="@dimen/main_header_font_size"
             android:gravity="center_vertical"
-            android:fontFamily="sans-serif"
+            android:fontFamily="sans-serif-thin"
             android:textColor="@color/smartwave_white"
             android:paddingLeft="10dp"/>
     </LinearLayout>
@@ -54,13 +54,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="device last checked: "
-            android:textSize="9pt"
+            android:textSize="@dimen/title_font_size"
             android:textColor="@color/smartwave_blue"/>
         <TextView
             android:id="@+id/detail_fragment_device_last_checked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8pt"
+            android:textSize="@dimen/body_font_size"
             android:text="June 12, 2014, 5:19 pm"/>
     </LinearLayout>
 
@@ -74,13 +74,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="mouse last found: "
-            android:textSize="9pt"
+            android:textSize="@dimen/title_font_size"
             android:textColor="@color/smartwave_blue"/>
         <TextView
             android:id="@+id/detail_fragment_mouse_last_found"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8pt"
+            android:textSize="@dimen/body_font_size"
             android:text="June 12, 2014, 5:19 pm"/>
     </LinearLayout>
     <LinearLayout
@@ -93,13 +93,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="current status: "
-            android:textSize="9pt"
+            android:textSize="@dimen/title_font_size"
             android:textColor="@color/smartwave_blue"/>
         <TextView
             android:id="@+id/detail_fragment_mouse_current_mouse_found"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8pt"
+            android:textSize="@dimen/body_font_size"
             android:text="N/A"/>
     </LinearLayout>
 
@@ -130,7 +130,7 @@
 
                     android:layout_height="wrap_content"
 
-                    android:textSize="7pt"
+                    android:textSize="@dimen/detail_fragment_button_text_size"
                     android:layout_gravity="center"
                     android:textColor="@android:color/white"
                     android:background="@drawable/red_holo_button"
@@ -144,7 +144,7 @@
                     android:id="@+id/fragment_detail_technical_details_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="7pt"
+                    android:textSize="@dimen/detail_fragment_button_text_size"
                     android:layout_marginLeft="15dp"
                     android:layout_gravity="center"
                     android:text="Details"
@@ -157,7 +157,7 @@
     <EditText
         android:id="@+id/fragment_detail_message"
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
+        android:layout_height="75dp"
         android:layout_margin="15dp"
         android:maxLines="4"
         android:background="@color/smartwave_comment_box"
@@ -173,6 +173,7 @@
         android:text="Enter"
         android:textColor="@color/white"
         android:textStyle="normal"
+        android:textSize="@dimen/detail_fragment_button_text_size"
         android:background="@drawable/holo_button"
         style="@style/loginButtonStyle"/>
     </LinearLayout>
