--- a/Android/app/src/main/res/values/dimens.xml
+++ b/Android/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">20dp</dimen>
     <dimen name="activity_vertical_margin">20dp</dimen>
+    <dimen name="main_header_font_size">20dp</dimen>
+    <dimen name="main_header_height">50dp</dimen>
+    <dimen name="title_font_size">18dp</dimen>
+    <dimen name="body_font_size">16dp</dimen>
+    <dimen name="detail_fragment_button_text_size">18dp</dimen>
 </resources>
