--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="white">#ffffffff</color>
     <color name="smartwave_blue">#005199</color>
     <color name="smartwave_button_enabled">#01a0b6</color>
-    <color name="smartwave_cyan">#99c1c6</color>
+    <color name="smartwave_cyan">#01A0b6</color>
     <color name="smartwave_button_disabled">#99c1c6</color>
     <color name="smartwave_button_disabled_text">#d9d9d9</color>
     <color name="smartwave_button_pressed">#0078a7</color>
