--- a/Android/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/app/src/main/res/layout/fragment_detail.xml
@@ -26,7 +26,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:text="3"
-                android:fontFamily="sans-serif"
+                android:fontFamily="sans-serif-thin"
                 android:textSize="12pt"
                 android:textColor="@color/smartwave_white"
                 android:gravity="center"/>
@@ -39,7 +39,7 @@
             android:text="South-west corner"
             android:textSize="10pt"
             android:gravity="center_vertical"
-            android:fontFamily="sans-serif"
+            android:fontFamily="sans-serif-thin"
             android:textColor="@color/smartwave_white"
             android:paddingLeft="10dp"/>
     </LinearLayout>
